--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 // CONCOURSE
 .credentials.yml
 
+// FIND-LATEX-VERSION
+/find-latex-version/test.aux
+/find-latex-version/test.dvi
+/find-latex-version/test.log
+/find-latex-version/test.svg
+
 // Ignore .vagrant
 **/.vagrant
 **/.log
