--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,70 +1,93 @@
 # my-latex-renders pipeline.yml
 
+#------------------------------------------------------------------------------------------
 jobs:
 
+#**********************************************
 - name: job-readme-github-pages
+#**********************************************
   plan:
-  - get: my-latex-renders
-    trigger: true
-  - put: resource-slack-alert
-    params:
-      channel: '#jeff-builds'
-      text: "From my-latex-renders: STARTED job-readme-github-pages in concourse ci."
-  - put: resource-repo-status
-    params: { state: "pending", description: "STARTED job-readme-github-pages in concourse ci.", commit: "my-latex-renders" }
-  - task: task-readme-github-pages
-    file: my-latex-renders/ci/tasks/task-readme-github-pages.yml
-    on_success:
-      do:
-      - put: my-latex-renders
-        params:
-          repository: my-latex-renders-updated  
-      - put: resource-slack-alert
-        params:
-          channel: '#jeff-builds'
-          text: "From my-latex-renders: PASSED job-readme-github-pages in concourse ci."
-      - put: resource-repo-status
-        params: { state: "success", description: "PASSED job-readme-github-pages in concourse ci", commit: "my-latex-renders" }
-    on_failure:
-      do:
-      - put: resource-slack-alert
-        params:
-          channel: '#jeff-builds'
-          text: "From my-latex-renders: FAILED job-readme-github-pages in concourse ci."
-      - put: resource-repo-status
-        params: { state: "failure", description: "FAILED job-readme-github-pages in concourse ci", commit: "my-latex-renders" }
 
+    # GET REPO FROM GITHUB
+    - get: my-latex-renders
+      trigger: true
+    # SEND SLACK ALERT  
+    - put: resource-slack-alert
+      params:
+        channel: '#jeff-builds'
+        text: "From my-latex-renders: STARTED job-readme-github-pages in concourse ci."
+    # SEND GITHUB STATUS
+    - put: resource-repo-status
+      params: { state: "pending", description: "STARTED job-readme-github-pages in concourse ci.", commit: "my-latex-renders" }    
+    
+    # RUN TASK IN REPO USING ALPINE DOCKER IMAGE
+    - task: task-readme-github-pages
+      file: my-latex-renders/ci/tasks/task-readme-github-pages.yml
+      
+      # TASK SUCCESS
+      on_success:
+        do:
+          # PUSH NEW REPO TO GITHUB
+          - put: my-latex-renders
+            params:
+              repository: my-latex-renders-updated  
+          # SEND SLACK ALERT  
+          - put: resource-slack-alert
+            params:
+              channel: '#jeff-builds'
+              text: "From my-latex-renders: PASSED job-readme-github-pages in concourse ci."
+          # SEND GITHUB STATUS
+          - put: resource-repo-status
+            params: { state: "success", description: "PASSED job-readme-github-pages in concourse ci", commit: "my-latex-renders" }
+      
+      # TASK FAILURE   
+      on_failure:
+        do:
+          # SEND SLACK ALERT  
+          - put: resource-slack-alert
+            params:
+              channel: '#jeff-builds'
+              text: "From my-latex-renders: FAILED job-readme-github-pages in concourse ci."
+          # SEND GITHUB STATUS
+          - put: resource-repo-status
+            params: { state: "failure", description: "FAILED job-readme-github-pages in concourse ci", commit: "my-latex-renders" }
+
+#------------------------------------------------------------------------------------------
 resource_types:
 
-- name: slack-notification
-  type: docker-image
-  source:
-    repository: cfcommunity/slack-notification-resource
-    tag: latest
-- name: github-status
-  type: docker-image
-  source:
-    repository: dpb587/github-status-resource
-    tag: master
+  - name: slack-notification
+    type: docker-image
+    source:
+      repository: cfcommunity/slack-notification-resource
+      tag: latest
 
+  - name: github-status
+    type: docker-image
+    source:
+      repository: dpb587/github-status-resource
+      tag: master
+
+#------------------------------------------------------------------------------------------
 resources:
 
-- name: my-latex-renders
-  type: git
-  icon: github
-  source:
-    #uri: https://github.com/jeffdecola/my-latex-renders
-    uri: git@github.com:jeffdecola/my-latex-renders.git
-    branch: master
-    private_key: {{git_private_key}}
-- name: resource-slack-alert
-  type: slack-notification
-  icon: slack
-  source:
-    url: {{slack_url}} 
-- name: resource-repo-status 
-  type: github-status
-  icon: github
-  source:
-    repository: jeffdecola/my-latex-renders 
-    access_token: {{repo_github_token}}
+  - name: my-latex-renders
+    type: git
+    icon: github
+    source:
+      #uri: https://github.com/jeffdecola/my-latex-renders
+      uri: git@github.com:jeffdecola/my-latex-renders.git
+      branch: master
+      private_key: ((git_private_key))
+
+  - name: resource-slack-alert
+    type: slack-notification
+    icon: slack
+    source:
+      url: ((slack_url)) 
+
+  - name: resource-repo-status 
+    type: github-status
+    icon: github
+    source:
+      repository: jeffdecola/my-latex-renders 
+      access_token: ((repo_github_token))
