--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -77,7 +77,7 @@ resources:
       #uri: https://github.com/jeffdecola/my-latex-renders
       uri: git@github.com:jeffdecola/my-latex-renders.git
       branch: master
-      private_key: ((git_private_key))
+      private_key: ((concourse_git_private_key))
 
   - name: resource-slack-alert
     type: slack-notification
